--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -8,6 +8,16 @@
     <meta name="description" content="Technical Web Development Blog">
     <meta name="author" content="Eric Potter">
     <script src="/js/all.js" type="text/javascript"></script>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-44132208-1', 'humbletoolsmith.com');
+  ga('send', 'pageview');
+
+	</script>
 	<link href="/css/all.css" rel="stylesheet">	
 	
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
