Wrote the Commodore Vic 20 post

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,7 +1,7 @@
 <h2>About Me</h2>
 <p>
     <img src="{{ site.author.gravatar }}" alt="{{ site.author.name }}" title="Follow me on Twitter @{{ site.author.twitter }}"  class="img-rounded floatLeft" />
-    My name is Eric Potter. I have an amazing wife and 5 wonderful children. I am a software architect for Aptera Software in Ft. Wayne Indiana and an adjunct professor for Indiana Tech. I am a humble toolsmith.
+    My name is Eric Potter. I have an amazing wife and 5 wonderful children. I am a Microsoft MVP for .Net. I am a software architect for Aptera Software in Ft. Wayne Indiana and an adjunct professor for Indiana Tech. I am a humble toolsmith.
     </p>					
 <p>
     <h6>pottereric.github.com</h6> <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user={{ site.author.github }}&repo={{ site.author.github }}.github.com&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>&nbsp;<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user={{ site.author.github }}&repo={{ site.author.github }}.github.com&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
