Added generalist or specialist link

--- a/_includes/ApteraBlogPosts.html
+++ b/_includes/ApteraBlogPosts.html
@@ -2,9 +2,9 @@
 <p>
 	Posts I have written for the Aptera Blog:
 	<ul>
+		<li><a href="http://blog.apterainc.com/custom-software/should-custom-software-developers-be-generalists-or-a-specialists">Should Custom Software Developers Be Generalists or a Specialists?</a></li>
 		<li><a href="http://blog.apterainc.com/switching-from-waterfall-to-scrum-midstream">Switching from Waterfall to Scrum midstream</a></li>
 		<li><a href="http://blog.apterainc.com/theirs-but-to-do-and-die-why-a-lack-of-communication-will-lead-to-a-software-development-disaster">Importance of Communication for Software Teams</a></li>
-		<li><a href="http://blog.apterainc.com/bid/392475/Programming-Languages-and-Taco-Bell-Same-Features-New-Combinations">Programming Languages and Taco Bell</a></li>
 		<li><a href="http://blog.apterainc.com/bid/386640/Unit-Testing-Days-of-Future-Past-for-Software-Development">Unit Testing - Days of Future Past</a></li>
 	<ul>
 </p>					
