Template Literals and Utility Types

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,7 +1,7 @@
 <h2>About Me</h2>
 <p>
     <img src="{{ site.author.gravatar }}" alt="{{ site.author.name }}" title="Follow me on Twitter @{{ site.author.twitter }}"  class="img-rounded floatLeft" />
-    My name is Eric Potter. I have an amazing wife and 5 wonderful children. I am a Microsoft MVP for Developer Tools and Technologies, a Principal Architect for Core BTS in Ft. Wayne Indiana, and an adjunct professor for Indiana Tech. I am a humble toolsmith.
+    My name is Eric Potter. I have an amazing wife and 5 wonderful children. I am a Microsoft MVP for Developer Tools and Technologies, the Director of Technical Education for Sweetwater in Ft. Wayne Indiana, and an adjunct professor for Indiana Tech. I am a humble toolsmith.
     </p>					
     <p>
     	<img src="/img/MicrosoftMvp.png" alt="Microsoft MVP Award" />
